--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -8,41 +8,45 @@
 
 {# nu de block content op in de main pagina vullen #}
 {% block content %}
-    {# Dit is commentaar #}
-
-    {# Print #}
-    <h1>Heading #1</h1>
-    <h2>Heading #2</h2>
-    <h3>Heading #3 t/m 5</h3>
-
-    <h4>Dit is de template {{  title }}</h4>
-
-{# Loop #}
-    <ul>
+ 
     {% for record in data %}
-        <li>
-            <img src="{{ record.foto }}" style="width: 100px; heigfht: 100px;">
+     <div class="col-md-6" style="background-color: #999"> {# nr 4#}    {# HIer maken we een nieuwe bootstrap opdeling binnen content iedere 6 #}
 
-            {{ record.title }}
+
+        <div class="row">
+            <img src="assets/img/gerechten/{{record.gerecht.afbeelding}}" style="width: 400px; height: 200px;">
+        </div> {# #}
+        <div class="row">
+            <div class="col-md-6" style="background-color: #ffffff"> {# nr 3#}
+            {{ record.gerecht.titel }}
             {# sub-loop #}
-            <ul>
+            
                 {% for ingr in record.ingredienten %}
-                    <li>
-                        <span {% if ingr.id < 2 %}style='color: #F00'{% endif %}>{{  ingr.naam }}</span>
+               
+                    
+                        <span {% if ingr.id < 3 %}style='color: #F00'{% endif %}>{{  ingr.naam }}</span>
 
                         {# if #}
                         {%  if ingr.id == 3 %}
                             <strong>Dit is ID 3!</strong>
                         {%  endif  %}
-                    </li>
+                    
+                    
                 {% endfor %}
-            </ul>
-        </li>
+            </div> {# nr 3#}
+                 <div class="col-md-6" style="background-color: #097"> Hello {# nr 2#}
+                 </div> {# nr 2#}
+
+        </div>
+        <div class="row">
+
+        </div>
+        </div> {# nr 4#}
     {% endfor %}
     <ul>
      {# Dump #}
        <pre>
-        {{ dump(data) }}
+        {#{{ dump(data) }}#}
        </pre>
 
 {% endblock %}
