--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -2,4 +2,7 @@
 
 {% block header %}
 <h1>Hallo Bram</h1>
+<div class="row">
+            <img src="assets/img/gerechten/{{record.gerecht.afbeelding}}" style="width: 400px; height: 200px;">
+        </div> 
 {% endblock %}
