--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -19,45 +19,51 @@
 
     {# 1ste row met de header 12 #}
     <div class="row">
-        <div class="col-md-12" style="background-color: #F00">
+        <div class="col-md-12">
         {% block header %}
-            
         {% endblock %}   
         </div>
     </div>
 
     {# 2de row met de agenda (moet nog worden opgeslits in homepage.html met agenda en login los) #}
     <div class="row">
-        <div class="col-md-3" style="background-color: #00F">
-        {# mogelijk van dit block ook ff een block maken om in de homepage te gebruiken #}
-            <div class="col-md-12" style="background-color: #6e8722"> 
-                <h2> Agenda  </h2>
-                <p> <h3> Vegatarisch koken </h3> 
-                Een workship vegatarisch koken onder leiding van Bobby </p>
+        <div class="col-md-3" style="background-color: #FFF">
+        <div class="col-md-12" style="background-color: #6e8722"> 
+            <h2> Agenda  </h2>
+            <p> <i class="fa fa-file-pdf"></i>
+            <h3> Vegatarisch koken </h3> 
+            Een workship vegatarisch koken onder leiding van Bobby </p>
 
-                <p> <h3> Vegatarisch koken </h3> 
-                Een workship vegatarisch koken onder leiding van Bobby </p>
+            <p> <h3> Vegatarisch koken </h3> 
+            Een workship vegatarisch koken onder leiding van Bobby </p>
 
-                <p> <h3> Vegatarisch koken </h3> 
-                Een workship vegatarisch koken onder leiding van Bobby </p>
-            </div>{# Einde agenda class #}
+            <p> <h3> Vegatarisch koken </h3> 
+            Een workship vegatarisch koken onder leiding van Bobby </p>
 
-            <div class="col-md-12" style="background-color: #b31714">
-                <h2> Login </h2>
-                email <br>
-                {# invulvak #}
-                wachtwoord <br>
-                {# invulvak #}
-            </div>
+            <p> <h3> Vegatarisch koken </h3> 
+            Een workship vegatarisch koken onder leiding van Bobby </p>
+
+            <p> <h3> Vegatarisch koken </h3> 
+            Een workship vegatarisch koken onder leiding van Bobby </p>
+    </div> {# Einde agenda class #}
+
+    <div class="col-md-12" style="background-color: #b31714">
+        <h2> Login </h2>
+        email <br>
+        {# invulvak #}
+        wachtwoord <br>
+        {# invulvak #}
+    </div> 
 
 
-
+            <!-- Voorbeeld
             <h2>Agenda</h2>
             <i class="fa fa-calendar"></i> FontAwesome <a href="https://fontawesome.com/icons?d=gallery&m=free">Documentation</a><br>
             <i class="fa fa-file-pdf"></i><a href="https://www.layoutit.com/build">Layout-it</a>
-
-
+            -->
         </div>
+
+
         <div class="col-md-9" style="background-color: #0F0">
             <h2>Content</h2>
             <div class="row">
