--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -2,7 +2,7 @@
 {% extends "main.html.twig" %}
 
 {% block header %}
-<div class="col-md-12" style="background-image: url('assets/img/razer-wallpapers-page-hero-mobile.jpg')">
+<div class="col-md-12" style="background-image: url('assets/img/site_header.jpg'); background-repeat: no-repeat;">
     <img src="assets/img/logo-v2.png"/>
 </div>
 {% endblock %}
@@ -19,7 +19,7 @@
 
         {# Hier start de 1de row met daarbinnen de afbeelding #}
         <div class="row">
-            <img src="assets/img/gerechten/{{record.gerecht.afbeelding}}" style="width: 400px; height: 200px;">
+            <img src="assets/img/gerechten/{{record.gerecht.afbeelding}}" style="width: 400px; height: 200px; background-repeat: no-repeat;">
         </div> 
 
         {# Hier start de 2de row met daarbinnen de titel en sterren #}
