--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -23,7 +23,7 @@
 -->
 
     {# 1ste row met de header 12 #}
-        <div class="row">          
+        <div class="row" style= "min-height: 70%";>          
         {% block header %}
         {% endblock %}   
         </div>
