Betere kwaliteit plaatjes gerechten toegevoegd

--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -7,10 +7,10 @@
         $(document).ready( function() {
 
             const mySlides = [
-                {src: "assets/img/gerechten/Eggs_and_Veggies.PNG"},             // Kan ook met assets/img/gerechten/{{data.0.gerecht.afbeelding}} en dan data.1, data.2 etc
-                {src: "assets/img/gerechten/Vegan_Burger.PNG"},
-                {src: "assets/img/gerechten/Sushi_Rolls.PNG"},
-                {src: "assets/img/gerechten/Pizza_Green.PNG"}
+                {src: "assets/img/gerechten/Eggs_and_Veggies.jpg"},             // Kan ook met assets/img/gerechten/{{data.0.gerecht.afbeelding}} en dan data.1, data.2 etc
+                {src: "assets/img/gerechten/Vegan_Burger.jpg"},
+                {src: "assets/img/gerechten/Sushi_Rolls.jpg"},
+                {src: "assets/img/gerechten/Pizza_Green.png"}
             ] // Einde slide sources
                         
             $("#background-image").vegas({
