spacing comment url toegevoegd

--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -25,6 +25,8 @@
 
 
 {# nu de block content op in de main pagina vullen #}
+
+{#voor spacing later toe te voegen mogelijk gebruijken: https://getbootstrap.com/docs/4.0/utilities/spacing/ #}
 {% block content %}
  
     {% for record in data %}    {# Deze loopt door de gehele data ($gerechten array) heen. #}
