for loop gemaakt van agenda input

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -37,28 +37,14 @@
         <div class="col-md-3" style="background-color: #FFF">
             <div class="col-md-12" style="background-color: #6e8722"> 
                 <center> <img src="assets/img/verrukkulluk-agenda.png" style="height: 80px; width: 187px"/> </center> <br>
-                <div class="row">
-                <p> <h3>  <i class="fa fa-calendar-day" style="color:white"></i>                                    
-                Vegatarisch koken </h3> 
-                Een workship vegatarisch koken onder leiding van Bobby </p>
-
-                <p> <h3>  <i class="fa fa-calendar-day" style="color:white"></i>                                    
-                Vegatarisch koken </h3> 
-                Een workship vegatarisch koken onder leiding van Bobby </p>
-
-                <p> <h3>  <i class="fa fa-calendar-day" style="color:white"></i>                                    
-                Vegatarisch koken </h3> 
-                Een workship vegatarisch koken onder leiding van Bobby </p>
-
-                <p> <h3>  <i class="fa fa-calendar-day" style="color:white"></i>                                    
-                Vegatarisch koken </h3> 
-                Een workship vegatarisch koken onder leiding van Bobby </p>
-
-                <p> <h3>  <i class="fa fa-calendar-day" style="color:white"></i>                                    
-                Vegatarisch koken </h3> 
-                Een workship vegatarisch koken onder leiding van Bobby </p>
-                </div>
-            </div> {# Einde agenda class #} <br> <br> <br> <br> {# Hier komen line breaks #}
+                <div class="row"> {# Rijen met input van de agenda #}
+                {% for calendar in 0..5 %}
+                    <p> <h3>  <i class="fa fa-calendar-day" style="color:white"></i>                                    
+                    Vegatarisch koken </h3> 
+                    Een workship vegatarisch koken onder leiding van Bobby </p>
+                {% endfor %}
+                </div> {# Einde rijen input #}
+            </div> {# Einde agenda class #} {# Hier stonden de line breaks #}
 
             <div class="col-md-12" style="background-color: #b31714">
                 <center> <img src="assets/img/verrukkulluk-login.png" style="height: 80px; width: 187px"/> </center> <br>
